# LR1110-transceiver-lib

./: CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf9160dk_nrf9160ns.overlay  nrf9160dk_nrf9160spm.conf  nrf9160dk_nrf9160spm.overlay
examples/version_check/: version_check.c
examples/wifi_scan/: wifi_scan.c
src/: lr1110.c  lr1110.h  lr1110_configs.c  lr1110_configs.h  lr1110_trx_board.c  lr1110_trx_board.h  lr1110_wifi_scan.c  lr1110_wifi_scan.h
